nobase_include_HEADERS = \
			 ls.h \
			 ls/list.h \
			 ls/poison.h \
			 ls/rbtree_augmented.h \
			 ls/rbtree.h \
			 ls/stddef.h \
			 ls/types.h \
			 ls/bitops.h \
			 ls/bitmap.h \
			 ls/string.h \
			 ls/hexdump.h \
			 ls/ini.h \
			 ls/pr.h \
			 ls/jhash.h \
			 ls/avltree.h \
			 ls/file.h \
			 ls/csv.h \
			 ls/daemon.h \
			 ls/heap.h \
			 ls/prio_tree.h \
			 ls/unit_test.h \
			 ls/base64.h \
			 ls/bitops/__ffs.h \
			 ls/bitops/__fls.h \
			 ls/bitops/atomic.h \
			 ls/bitops/ffs.h \
			 ls/bitops/ffz.h \
			 ls/bitops/find.h \
			 ls/bitops/fls.h \
			 ls/bitops/fls64.h \
			 ls/bitops/hweight.h \
			 ls/bitops/non-atomic.h
